--- a/404.html
+++ b/404.html
@@ -1,24 +1,10 @@
 ---
-layout: default
+layout: default-page
 ---
 
-<style type="text/css" media="screen">
-  .container {
-    margin: 10px auto;
-    max-width: 600px;
-    text-align: center;
-  }
-  h1 {
-    margin: 30px 0;
-    font-size: 4em;
-    line-height: 1;
-    letter-spacing: -1px;
-  }
-</style>
-
-<div class="container">
-  <h1>404</h1>
+<div class="text-center container">
+  <h1 class="m-0 mt-3" style="font-size: 7rem;">404</h1>
 
   <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <p class="mb-5">The requested page could not be found.</p>
 </div>
