--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ layout: home
 </div>
 
 <div id="projects" class="stretch-vw bg-dark">
-  <div class="container py-5 py-lg-0">
+  <div class="container pt-5 pt-lg-0">
     <div class="d-lg-none">
       <p class="text-center my-0 pb-2 color-light">
         Here's some of my projects.
@@ -76,11 +76,11 @@ layout: home
       {%- endfor -%}
     </div>
     <div class="d-none d-lg-block">
-      <p class="text-center mt-5 color-light">
+      <p class="text-center mt-5 mb-0 color-light">
         Here's some of my projects.
       </p>
     </div>
-    <div class="text-center pt-3 pb-5">
+    <div class="text-center py-5">
       <a class="btn text-deco-none" href="{{ '/projects/' | relative_url }}">See all projects</a>
     </div>
   </div>
