--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ layout: home
     <p>
       I've utilised many IDEs, including Visual Studio and VS Code. I've had extensive use of specialized 
       softwares, such as Unity, Adobe Photoshop, Inkscape, Blender and MySQL Workbench. In terms of web 
-      frameworks, I am proficient with jQuery, Vue, Jekyll and Hexo. 
+      frameworks, I am proficient with jQuery, Vue and Jekyll. 
     </p>
   </section>
 </div>
@@ -65,7 +65,7 @@ layout: home
         <a class="col-auto btn-link" href="{{ item.link | relative_url }}">
           <div class="card-wrapper" style="width: 250px;">
             <div class="card bg-light">
-              <img src="https://picsum.photos/id/1043/250/250.jpg" alt="placeholder" lazyload loading="lazy">
+              <img src="{{ item.src }}" alt="{{ item.name }} thumbnail" lazyload loading="lazy">
               <div class="card-content">
                 <h4 class="card-header">{{ item.name }}</h4>
                 <small class="card-desc">{{ item.desc }}</small>
