Add store and update bio

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
 layout: home
+css: home
 ---
 
 <div id="home-header">
@@ -13,11 +14,8 @@ layout: home
     <h1>// Hello :]</h1>
     <p>
       I'm Bjorn Lu, also known as Blu. I'm a self-taught programmer from Malaysia. 
-      I do front-end and static websites. I also do desktops apps and games occasionally.
-    </p>
-    <p>
-      Living in the fast-paced industry, I'm always eager to learn and discover new technologies. 
-      Moreover, I enjoy problem solving whenever I learn something new.
+      I like to built static websites and web apps. I also do desktops apps and games occasionally. 
+      Moreover, I enjoy problem solving and learning new technologies. 
     </p>
   </section>
   <br>
@@ -25,11 +23,11 @@ layout: home
     <h2>// Background</h2>
     <p>
       I'm 18, living in Kuching, Sarawak with my family, and currently taking foundation studies 
-      on information technology and multimedia at Swinburne Sarawak. I also did countless side projects 
-      during secondary school.
+      on information technology and multimedia at Swinburne Sarawak. I do many side projects 
+      during my free time.
     </p>
     <p>
-      I have great passion for electronic music and video games. They allowed me to open new perspective 
+      I have great passion for electronic music and video games. They allowed me to open new perspectives 
       and to think outside the box.
     </p>
   </section>
@@ -38,19 +36,19 @@ layout: home
     <h2>// Proficiencies</h2>
     <p>
       I had fiddled with many kinds of development, including games, softwares and web. As a result, I 
-      speak C#, HTML and CSS well. I also understand languages such as JavaScript, Lua, Python and SQL 
-      thorughout my projects. 
+      speak C# and JavaScript well. I also understand languages such as Python, Lua, HTML, CSS and SQL 
+      throughout my projects. 
     </p>
     <p>
-      I've utilised many IDEs, including Visual Studio and VS Code. I've had extensive use of specialized 
-      softwares, such as Unity, Adobe Photoshop, Inkscape, Blender and MySQL Workbench. In terms of web 
-      frameworks, I am proficient with jQuery, Vue and Jekyll. 
+      My go-to IDEs are Visual Studio and VS Code. I've had extensive use of specialized softwares, 
+      such as Unity, Adobe Photoshop, Adobe Illustrator, Inkscape, Blender and MySQL Workbench. In terms 
+      of web frameworks, I am proficient with jQuery, Vue and Jekyll. 
     </p>
   </section>
 </div>
 
 <div id="projects" class="stretch-vw bg-dark">
-  <div class="container pt-5 pt-lg-0">
+  <div class="container-fluid pt-5 pt-lg-0">
     <div class="d-lg-none">
       <p class="text-center my-0 pb-2 color-light">
         Here's some of my projects.
@@ -62,21 +60,19 @@ layout: home
         {%- if forloop.index > card_count -%}
           {%- break -%}
         {%- endif -%}
-        <a class="col-auto btn-link" href="{{ item.link | relative_url }}">
-          <div class="card-wrapper" style="width: 250px;">
-            <div class="card bg-light">
-              <img src="{{ item.src }}" alt="{{ item.name }} thumbnail" lazyload loading="lazy">
-              <div class="card-content">
-                <h4 class="card-header">{{ item.name }}</h4>
-                <small class="card-desc">{{ item.desc }}</small>
-              </div>
+        <a class="col-auto btn-link mt-3 mt-lg-0" href="{{ item.link | relative_url }}">
+          <div class="card bg-light">
+            <img src="{{ item.src }}" alt="{{ item.name }} thumbnail" lazyload loading="lazy">
+            <div class="card-content">
+              <h4 class="card-header">{{ item.name }}</h4>
+              <small class="card-desc">{{ item.desc }}</small>
             </div>
           </div>
         </a>
       {%- endfor -%}
     </div>
     <div class="d-none d-lg-block">
-      <p class="text-center mt-5 mb-0 color-light">
+      <p class="text-center my-0 color-light">
         Here's some of my projects.
       </p>
     </div>
@@ -90,7 +86,8 @@ layout: home
   <section>
     <h2>// Find Me</h2>
     <p>
-      Find me on Reddit! All of my projects can be found on Github. 
+      Find me on <a href="https://reddit.com/u/{{ site.reddit_username }}">Reddit</a>! 
+      All of my projects can be found on <a href="https://github.com/{{ site.github_username }}">GitHub</a>. 
     </p>
   </section>
 </div>
