--- a/projects/create-box/index.html
+++ b/projects/create-box/index.html
@@ -1,6 +1,6 @@
 ---
 title: Create Box
-layout: home-w-title
+subtitle: Project
 ---
 
 <section>
@@ -13,40 +13,21 @@ layout: home-w-title
 <br>
 <section>
   <h2>Project</h2>
+  <ul>
+    <li><a href="https://createbox-bjornlu.netlify.com">Create Box website</a></li>
+    <li><a href="https://github.com/BjornLuG/create-box">GitHub repo</a></li>
+  </ul>
   <p>
-    <span>
-      <a href="https://createbox-bjornlu.netlify.com" target="_blank" rel="noopener noreferrer">
-        Create Box website
-      </a>
-      <i class="fas fa-external-link-square-alt"></i>
-    </span>
-    <br>
-    <span>
-      <a href="https://github.com/BjornLuG/create-box" target="_blank" rel="noopener noreferrer">
-        GitHub repo
-      </a>
-      <i class="fas fa-external-link-square-alt"></i>
-    </span>
-  </p>
-  <p>
-    <span>Made with</span>
-    <span class="vertical-middle fa-2x">
-      <i class="fab fa-html5" style="color: #e34f26;"></i>
-      <i class="fab fa-css3-alt" style="color: #1680C0"></i>
-      <i class="fab fa-js-square" style="color: #f0d81d;"></i>
-      <i class="fab fa-bootstrap" style="color: #563d7c;"></i>
-    </span>
+    Made with HTML, CSS, JS and Bootstrap.
   </p>
 </section>
 <br>
 <section class="mb-5">
   <h2>What I've learned</h2>
   <p>
-    The project relied heavily on HTML canvas, which I had avoid for a long time because of its complexity. 
-    Initially, I opted for 
-    <a href="https://html2canvas.hertzen.com/" target="_blank" rel="noopener noreferrer">HTML2Canvas</a> 
-    for the box generation, but since it didn't have a solid support for box shadows, I decided to roll out my 
-    own generation system. Turns out it was really simple! I was amazed of how easy it was to convert the 
-    data to PNG too.
+    The project relied heavily on HTML canvas, which I had avoided for a long time due to its complexity. 
+    I initially opted for <a href="https://html2canvas.hertzen.com/">HTML2Canvas</a> for the box generation, 
+    but it didn't have a solid support for box shadows. So I decided to roll out my own generation system, 
+    turns out the Canvas API wasn't all that hard, working with it was a breeze!
   </p>
 </section>
