Update favicon and hero name

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@ css: home
 
 <div id="home-header">
   <div class="cover">
-    <h1 id="header-text">Bjorn Lu</h1>
+    <div id="header-hero-wrapper" class="container">
+      <img id="header-hero" src="{{ '/assets/images/name.png' | relative_url }}" alt="Bjorn Lu">
+    </div>
   </div>
 </div>
   
