--- a/projects/store/index.html
+++ b/projects/store/index.html
@@ -22,7 +22,7 @@ subtitle: Project
   </p>
 </section>
 <br>
-<section class="mb-5">
+<section>
   <h2>What I've learned</h2>
   <p>
     It actually started as a mini project to learn CSS extensively. Most of the components are built 
