--- a/store/buttons/index.html
+++ b/store/buttons/index.html
@@ -4,7 +4,7 @@ subtitle: Store
 css: buttons
 ---
 
-<div class="text-center mb-5">
+<section class="text-center">
   <button class="btn-slide left">Slide left</button>
   <button class="btn-slide right">Slide right</button>
   <button class="btn-slide top">Slide top</button>
@@ -20,12 +20,12 @@ css: buttons
     <span class="text-1">Reveal</span>
     <span class="text-2">Thanks</span>
   </button>
-</div>
-
-<div class="mb-5">
+</section>
+<br>
+<section>
   <h3>Inspirations</h3>
   <ul>
     <li><a href="https://freefrontend.com/css-button-hover-effects/">Free Frontend - 25 CSS Button Hover Effects</a></li>
     <li><a href="https://ianlunn.github.io/Hover/">Ian Lunn - Hover.css</a></li>
   </ul>
-</div>
+</section>
