--- a/projects/create-box/index.html
+++ b/projects/create-box/index.html
@@ -22,7 +22,7 @@ subtitle: Project
   </p>
 </section>
 <br>
-<section class="mb-5">
+<section>
   <h2>What I've learned</h2>
   <p>
     The project relied heavily on HTML canvas, which I had avoided for a long time due to its complexity. 
