--- a/store/index.html
+++ b/store/index.html
@@ -15,7 +15,7 @@ title: Store
               <div class="row">
                 <div class="col">{{ item.name }}</div>
                 <div class="col-auto">
-                  <i class="fas fa-arrow-right arrow"></i>
+                  <i class="fas fa-arrow-right arrow right"></i>
                 </div>
               </div>
             </a>
