Refactor button and code block style

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ css: home
       </p>
     </div>
     <div class="text-center py-5">
-      <a class="btn" href="{{ '/projects/' | relative_url }}">See all projects</a>
+      <a class="btn hoverable" href="{{ '/projects/' | relative_url }}">See all projects</a>
     </div>
   </div>
 </div>
