--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ css: home
         {%- endif -%}
         <a class="col-auto btn-link mt-3 mt-lg-0" href="{{ item.link | relative_url }}">
           <div class="card bg-light">
-            <img src="{{ item.src }}" alt="{{ item.name }} thumbnail" lazyload loading="lazy">
+            <img class="card-image" src="{{ item.src }}" alt="{{ item.name }} thumbnail" lazyload loading="lazy">
             <div class="card-content">
               <h4 class="card-header">{{ item.name }}</h4>
               <small class="card-desc">{{ item.desc }}</small>
