--- a/projects/material-shadow-preview/index.html
+++ b/projects/material-shadow-preview/index.html
@@ -18,7 +18,7 @@ subtitle: Project
     <li><a href="https://github.com/BjornLuG/material-shadow-preview">GitHub repo</a></li>
   </ul>
   <p>
-    Made with Vue, Vuex, Vue Router and Vuetify.
+    Made with Vue, Vuex, Vue Router, Vuetify and Highlight.js.
   </p>
 </section>
 <br>
