Support image lazyload

--- a/projects/index.html
+++ b/projects/index.html
@@ -10,7 +10,7 @@ css: projects
         <div class="card card-projects hoverable bg-light">
           <div class="row">
             <div class="col-auto card-image-wrapper">
-              <img class="card-image" src="{{ item.src }}" alt="{{ item.name }} thumbnail"  lazyload loading="lazy">
+              <img class="card-image" src="{{ item.src }}" alt="{{ item.name }} thumbnail" loading="lazy" height="250">
             </div>
             <div class="col">
               <div class="card-content">
