--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@ css: home
     <h1>// Hello :]</h1>
     <p>
       I'm Bjorn Lu, also known as Blu. I'm a self-taught programmer from Malaysia. 
-      I like to built static websites and web apps. I also do desktops apps and games occasionally. 
-      Moreover, I enjoy problem solving and learning new technologies. 
+      I like to build static websites and full-stack web apps. I also do desktops apps and games occasionally. 
+      Besides, I enjoy problem-solving and learning new technologies. 
     </p>
   </section>
   <br>
@@ -38,11 +38,10 @@ css: home
     <h2>// Background</h2>
     <p>
       I'm 18, living in Kuching, Sarawak with my family, and currently taking foundation studies 
-      on information technology and multimedia at Swinburne Sarawak. I do many side projects 
-      during my free time.
+      at Swinburne Sarawak. I do many side projects during my free time.
     </p>
     <p>
-      I have great passion for electronic music and video games. They allowed me to open new perspectives 
+      I have a great passion for electronic music and video games. They allowed me to open new perspectives 
       and to think outside the box.
     </p>
   </section>
@@ -50,14 +49,13 @@ css: home
   <section>
     <h2>// Proficiencies</h2>
     <p>
-      I had fiddled with many kinds of development, including games, softwares and web. As a result, I 
-      speak C# and JavaScript well. I also understand languages such as Python, Lua, HTML, CSS and SQL 
-      throughout my projects. 
+      I had fiddled with game, app and web developments. My favourite languages are C# and JavaScript.
+      I also have experience with Python, Lua and SQL.
     </p>
     <p>
-      My go-to IDEs are Visual Studio and VS Code. I've had extensive use of specialized softwares, 
-      such as Unity, Adobe Photoshop, Adobe Illustrator, Inkscape, Blender and MySQL Workbench. In terms 
-      of web frameworks, I am proficient with jQuery, Vue and Jekyll. 
+      My go-to IDEs are Visual Studio and VS Code. I've had extensive use of specialized software, 
+      such as Unity, Adobe Photoshop, Adobe Illustrator, Inkscape and Blender. In the world of web,
+      I am comfortable with Jekyll, Vue, Nuxt, Jest, PostgreSQL, Express and Apollo (GraphQL).
     </p>
   </section>
 </div>
