--- a/projects/store/index.html
+++ b/projects/store/index.html
@@ -15,7 +15,7 @@ subtitle: Project
 <section>
   <h2>Project</h2>
   <ul>
-    <li><a href="{{ '/store' | relative_url }}">Store page</a></li>
+    <li><a href="{% link store/index.html %}">Store page</a></li>
   </ul>
   <p>
     Made with HTML, CSS, JS, Bootstrap and Jekyll.
