--- a/store/gems/index.html
+++ b/store/gems/index.html
@@ -6,7 +6,7 @@ css: gems
 
 <section>
   <div class="text-right">
-    <a class="btn-link arrow-hover" href="{{ '/store/' | relative_url }}">
+    <a class="btn-link arrow-hover" href="{% link store/index.html %}">
       <i class="fas fa-arrow-left arrow left mr-3"></i>
       Back
     </a>
@@ -47,4 +47,4 @@ css: gems
   </ul>
 </section>
 
-<script src="{{ '/assets/js/box-options.js' | relative_url }}"></script>
+<script src="{% link assets/js/box-options.js %}"></script>
